# reductstore_agent

./: .coveragerc  .gitignore  CHANGELOG.md  CHANGELOG.rst  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ci.yml  docker-ros.yml  format.yml
benchmark/: Monitoring ROS vs. Agent.ipynb  README.md  benchmark.py  config.yaml  get_reductstore_size.py
config/: config_backup.yml  default.yml  params.yml  rosbag_replayer.yml
launch/: reductstore_agent_launch.py  ros2_reduct_agent_launch.py  rosbag_replayer.py
reductstore_agent/: attachment.py  config_manager.py  config_models.py  downsampler.py  dynamic_labels.py  models.py  pipeline_manager.py  pipeline_state.py  raw_output.py  rawoutput_writer.py  recorder.py  state.py  utils.py
reductstore_agent/writer/: __init__.py  base.py  cdr.py  factory.py  mcap.py  raw.py
ros2_reduct_agent/: config_models.py  recorder.py  ros2_reduct_agent.py  utils.py
rosbag_replayer/: README.md  __init__.py  rosbag_replayer.py
snap/: README.md  snapcraft.yaml
snap/hooks/: configure  connect-plug-configuration-read  disconnect-plug-configuration-read  install
snap/local/: config_help.sh  run_recorder.sh  run_replayer.sh
test/: __init__.py  conftest.py  test_basic.py  test_downsampling.py  test_entry_point.py  test_flake8.py  test_msg_schema_utils.py  test_pep257.py  test_raw_output.py  test_recorder_params.py  test_recorder_state.py  test_si_units.py  test_storage.py  test_topic_subscription.py  utils.py
test/config/: __init__.py  test_recorder_params.py
test/integration/: __init__.py  (+7 more)
testdata/: demo.mcap
(+10 files in other folders)
